syntax = "proto3";

package auth_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/AwesomeXjs/registration-service-with-checking-mail/auth-service/pkg/auth_v1;auth_v1";

service AuthV1 {
  // Register new user with email and password, returns access token, refresh token and user id
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);

  // Login with email and password
  rpc Login(LoginRequest) returns (LoginResponse);

  // Validate access token for authentication
  rpc ValidateToken(ValidateTokenRequest) returns (google.protobuf.Empty);

  // Get access token from refresh token
  rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse);

  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty);
}

message RegistrationRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  string role = 5;
}

message RegistrationResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string userId = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string userId = 3;
}

message ValidateTokenRequest {
  string accessToken = 1;
}

message GetAccessTokenRequest {
  string refreshToken = 1;
}

message GetAccessTokenResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message UpdatePasswordRequest {
  string email = 1;
  string newPassword = 2;
}

